--- a/Test biogeme.ipynb
+++ b/Test biogeme.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,9 +34,7 @@
    "source": [
     "# Read the preprocessed dataset \n",
     "with open('./data/data_stand.pkl','rb') as f:  \n",
-    "    data=pkl.load(f)\n",
-    "with open('./data/data_non_stand.pkl','rb') as f:  \n",
-    "    data_non_stand=pkl.load(f)"
+    "    data=pkl.load(f)"
    ]
   },
   {
@@ -93,7 +91,7 @@
    },
    "outputs": [],
    "source": [
-    "corr_choice_attribute=pd.DataFrame(columns=plot.get_modes(),index=nn.get_vars())"
+    "# corr_choice_attribute=pd.DataFrame(columns=plot.get_modes(),index=nn.get_vars())"
    ]
   },
   {
@@ -184,10 +182,10 @@
     }
    ],
    "source": [
-    "# choose vars of each mode\n",
-    "data_test_mnl=data.sample(100000,random_state=42).reset_index()\n",
-    "data_test_mnl.drop(columns=['index','IndividualID','HouseholdID','Year','Household_region'],inplace=True)\n",
-    "mnl_col,corr_mnl=nn.get_vars_MNL(data_test_mnl)"
+    "# # choose vars of each mode\n",
+    "# data_test_mnl=data.sample(100000,random_state=42).reset_index()\n",
+    "# data_test_mnl.drop(columns=['index','IndividualID','HouseholdID','Year','Household_region'],inplace=True)\n",
+    "# mnl_col,corr_mnl=nn.get_vars_MNL(data_test_mnl)"
    ]
   },
   {
@@ -198,16 +196,16 @@
    },
    "outputs": [],
    "source": [
-    "accuracy_mnl=[]\n",
-    "prob_mnl_pre=[]\n",
-    "for i in data_list:\n",
-    "    acc,pred=nn.MNL_MODEL(i,mnl_col)\n",
-    "    accuracy_mnl.append(acc)\n",
-    "    prob_mnl_pre.append(pred)\n",
+    "# accuracy_mnl=[]\n",
+    "# prob_mnl_pre=[]\n",
+    "# for i in data_list:\n",
+    "#     acc,pred=nn.MNL_MODEL(i,mnl_col)\n",
+    "#     accuracy_mnl.append(acc)\n",
+    "#     prob_mnl_pre.append(pred)\n",
     "    \n",
-    "pd.DataFrame(accuracy_mnl).to_csv('accuracy_mnl.csv')\n",
-    "for i in range(len(years_str)):\n",
-    "    pd.DataFrame(prob_mnl_pre[i]).to_csv(f'prob_mnl_pre{years_str[i]}.csv')"
+    "# pd.DataFrame(accuracy_mnl).to_csv('accuracy_mnl.csv')\n",
+    "# for i in range(len(years_str)):\n",
+    "#     pd.DataFrame(prob_mnl_pre[i]).to_csv(f'prob_mnl_pre{years_str[i]}.csv')"
    ]
   },
   {
@@ -218,7 +216,7 @@
    },
    "outputs": [],
    "source": [
-    "accuracy_mnl=pd.read_csv('accuracy_mnl.csv')"
+    "# accuracy_mnl=pd.read_csv('accuracy_mnl.csv')"
    ]
   },
   {
@@ -232,25 +230,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "/home/yutong/anaconda3/envs/rebnn/lib/python3.6/site-packages/biogeme/cbiogeme.cpython-36m-x86_64-linux-gnu.so: undefined symbol: _ZTVN10__cxxabiv120__si_class_type_infoE",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-d2f3f35373fb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mbiogeme\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdatabase\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mdb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mbiogeme\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbiogeme\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mbio\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mbiogeme\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodels\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mmodels\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mbiogeme\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexpressions\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mexp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mseaborn\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0msns\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/yutong/anaconda3/envs/rebnn/lib/python3.6/site-packages/biogeme/database.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mbiogeme\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mdraws\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mbiogeme\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexpressions\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mVariable\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0misNumeric\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mNumeric\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     26\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/yutong/anaconda3/envs/rebnn/lib/python3.6/site-packages/biogeme/expressions.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mbiogeme\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexceptions\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mexcep\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mbiogeme\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcbiogeme\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mcb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mbiogeme\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmessaging\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mmsg\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mImportError\u001b[0m: /home/yutong/anaconda3/envs/rebnn/lib/python3.6/site-packages/biogeme/cbiogeme.cpython-36m-x86_64-linux-gnu.so: undefined symbol: _ZTVN10__cxxabiv120__si_class_type_infoE"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import biogeme.database as db\n",
     "import biogeme.biogeme as bio\n",
@@ -261,6 +245,17 @@
     "import matplotlib.pyplot as plt\n",
     "import biogeme.results as res\n",
     "from biogeme.expressions import Beta, DefineVariable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "####################################  DEMO #################################################################"
    ]
   },
   {
@@ -786,16 +781,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<module 'biogeme_acc' from 'D:\\\\UCL\\\\RE-BNN\\\\biogeme_acc.py'>"
+       "<module 'biogeme_acc' from '/home/yutong/RE-BNN/biogeme_acc.py'>"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -808,47 +803,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "acc=[]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "acc=[]\n",
     "y=2005\n",
     "for data in data_list:\n",
-    "    accuracy=biogeme_acc.biogeme_mnl(data,year=str(y))\n",
+    "    accuracy,_ =biogeme_acc.biogeme_mnl(data,year=str(y))\n",
     "    acc.append(accuracy)\n",
     "    y=y+1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0.8411545471857232,\n",
-       " 0.838159014188874,\n",
-       " 0.8366228683254123,\n",
+       "[0.8410185260752469,\n",
+       " 0.8373631199055904,\n",
+       " 0.8364271736091697,\n",
        " 0.8299658508821856,\n",
-       " 0.8304428992722058,\n",
-       " 0.8324247987572376,\n",
-       " 0.8303863785199738,\n",
-       " 0.83415394030432,\n",
-       " 0.8333928571428572,\n",
-       " 0.8272611612306269,\n",
-       " 0.8291197923105452,\n",
-       " 0.8334376770115971]"
+       " 0.8300100105516626,\n",
+       " 0.8321141081768112,\n",
+       " 0.8302673096386259,\n",
+       " 0.8337366825224624,\n",
+       " 0.832827380952381,\n",
+       " 0.8272033310201249,\n",
+       " 0.8290888861416739,\n",
+       " 0.8334078645320931]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "acc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.DataFrame(acc).to_csv('./results/mixedlogit/accuracy_mixed.csv')"
    ]
   },
   {
